# 2dphysics

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  backupcmake.txt  imgui.ini
.cache/clangd/index/: AABB.cpp.64A7E5F5E9C41C0C.idx  AABB.h.1777552CA825783F.idx  circle.cpp.F5968FAF58421A7F.idx  circle.h.147811D566A34705.idx  collisions.cpp.0597C965F5AD470A.idx  collisions.h.527B6F325782BBB7.idx  main.cpp.D7409D52CCE0819E.idx  mathfuncs.cpp.AD9633FBD6DFEF1A.idx  mathfuncs.h.8ED30E678B6C0AC3.idx  polygon.cpp.0A3E46CE1C16DCB9.idx  polygon.h.277BCC0954C99A71.idx  rigidbody.cpp.9AECCA13BCF792B4.idx  rigidbody.h.2F1D81A1F460C0C0.idx  runtimedata.h.6F9DCBEA97074773.idx  scene.cpp.1B81FDDFC43C0DC2.idx  scene.h.F01F2A78D703C931.idx  shape.cpp.EE40C5A7FCC4A147.idx  shape.h.9DDEFBDAAF052B54.idx  simplephysics.h.058C8537FEBB6BF5.idx  world.cpp.6B01EBD67D7ACFF7.idx  world.h.3A8C971D953C88FF.idx
Old Files/: physicsobject.h
Working Versions/: rigidbody.h
include/: AABB.h  circle.h  collisions.h  common.h  edge.h  engine.h  mathfuncs.h  physicsobject.h  physicsworld.h  polygon.h  rigidbody.h  runtimedata.h  scene.h  shape.h  simplephysics.h  transform.h  vec2d.h  world.h
scenes/: template.yaml  template2.yaml
src/: AABB.cpp  CMakeLists.txt  circle.cpp  collisions.cpp  edge.cpp  engine.cpp  main.cpp  mathfuncs.cpp  physicsobject.cpp  physicsworld.cpp  polygon.cpp  rigidbody.cpp  runtimedata.cpp  scene.cpp  shape.cpp  transform.cpp  vec2d.cpp  world.cpp
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/collisions/: AABB.cpp  AABB.h  CMakeLists.txt  collisions.cpp  collisions.h  rigidbody.cpp  rigidbody.h
src/core/common/: CMakeLists.txt  common.h  mathfuncs.cpp  mathfuncs.h
src/core/dynamics/: AABB.h  CMakeLists.txt  collisions.cpp  rigidbody.cpp  rigidbody.h
src/core/engine/: CMakeLists.txt  engine.cpp  engine.h  runtimedata.cpp  runtimedata.h  scene.cpp  scene.h  world.cpp  world.h
src/core/gui/: CMakeLists.txt  application.cpp  application.h  window.cpp  window.h
src/core/primitives/: CMakeLists.txt  circle.cpp  circle.h  edge.cpp  edge.h  polygon.cpp  polygon.h  shape.cpp  shape.h
src/core/renderer/: CMakeLists.txt
src/core/rendering/: CMakeLists.txt  imgui_scene.cpp  imgui_scene.h  scene.cpp  scene.h
tests/: simplecirclecollision.h  tests.h
